# OnkoNixAiCare

./: app.py  pyproject.toml
assets/: style.css
pages/: batch_analysis.py  dose_calculator.py  image_analysis.py  patient_info.py  report_analysis.py
utils/: data_analysis.py  image_processing.py  report_analyzer.py
